--- a/IC/w1c2/HelloWorld.html
+++ b/IC/w1c2/HelloWorld.html
@@ -6,7 +6,9 @@
 </head>
 <body>
 <h1>Hello World!</h1>
-Welcome to my website.
+<p>Welcome to my website.</p>
+
+<a href="resources.html">Resources</a>
 
 </body>
 </html>
