--- a/A05/back.html
+++ b/A05/back.html
@@ -33,14 +33,16 @@
 
 <div id="main">
   <div id="sidebar">
-    <h3>Sidebar</h3>
-    The sidebar takes up 25% of the window.
+    <h3>Background</h3>
+    This is a sample of an image set as the background.
   </div>
 
   <div id="section">
-    <h2>Home Page</h2>
+    <div id="extra">
+      <h2>Background Image</h2>
 
-    <p>This page uses a stylesheet instead of tables to format</p>
+      <p>This page uses a stylesheet instead of tables to format</p>
+    </div>
   </div>
 </div>
 
