--- a/IC/w5c1/home.html
+++ b/IC/w5c1/home.html
@@ -67,7 +67,7 @@
       <div class="col-sm-9">
         <div id="section">
           <h3>Home:</h3>
-          The following are sample event handlers in Javascript<br><br>
+          The following are sample event handlers in JQuery<br><br>
 
           <div id="clicked">Click me to change this text</div>
           <br>
